# DocuScan

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-linux.yml  build-windows.yml
scripts/: build-sidecar-linux.sh  build-sidecar-windows.bat
sidecar/: build.py  extractor.py  main.py  ocr_engine.py  providers.py  requirements.txt
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sidecar-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: exporter.rs  file_handler.rs  mod.rs  ocr_bridge.rs
src/components/: ApiKeyInput.tsx  DropZone.tsx  ExportBar.tsx  FieldEditor.tsx  ResultsTable.tsx  StatusBar.tsx  TemplateSelector.tsx
src/hooks/: useExtraction.ts
src/styles/: globals.css
src/types/: index.ts
