[package]
name = "docuscan"
version = "0.1.0"
description = "AI-powered local document data extraction desktop app"
authors = ["Hateem Hassan"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "docuscan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
pdf-extract = "0.7"
csv = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
